--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tocharian/mcp-server-kibana",
   "description": "Kibana MCP Server",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "Apache-2.0",
   "author": "TocharinOU",
   "type": "module",
@@ -32,7 +32,9 @@
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "start": "node dist/index.js",
+    "start:http": "MCP_TRANSPORT=http node dist/index.js",
     "start:ts": "NODE_OPTIONS=\"--loader ts-node/esm\" node index.ts",
+    "start:http:ts": "MCP_TRANSPORT=http NODE_OPTIONS=\"--loader ts-node/esm\" node index.ts",
     "inspector": "npx @modelcontextprotocol/inspector node dist/index.js",
     "inspector:ts": "NODE_OPTIONS=\"--loader ts-node/esm\" npx @modelcontextprotocol/inspector node index.ts",
     "test": "jest",
@@ -42,9 +44,11 @@
     "generate-notice": "node ./scripts/generate-notice.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.8.0",
+    "@modelcontextprotocol/sdk": "^1.18.2",
+    "@types/express": "^5.0.3",
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
+    "express": "^5.1.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
     "ts-node": "^10.9.2",
@@ -54,15 +58,15 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "22.13.15",
-    "license-checker": "^25.0.1",
-    "shx": "0.4.0",
-    "typescript": "^5.8.3",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "22.13.15",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.0"
+    "license-checker": "^25.0.1",
+    "shx": "0.4.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.8.3"
   },
   "publishConfig": {
     "access": "public"
