--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ scripts/*.log
 # 内部开发文档和规范（不同步到 GitHub）
 PARAMETER_FORMAT_STANDARDS.md
 VL_TOOLS_TODO.md
+DT_TOOLS_TODO.md
+SC_TOOLS_TODO.md
+TOOLS_ROADMAP.md
+API_VERIFICATION_REPORT.md
+OB_TOOLS_IMPLEMENTATION_SUMMARY.md
+README_UPDATE_SUMMARY.md
+REMAINING_APIS_ANALYSIS.md
+KIBANA_MCP_SYSTEM_PROMPT.md
+API_FEATURES_EXPLANATION.md
+KIBANA_API_CATEGORIES.md
+NEW_TOOLS_SUMMARY.md
+COMPILATION_FIXES.md
+API_COMPLIANCE_AUDIT.md
+FINAL_REVIEW_SUMMARY.md
+ML_TOOLS_TODO.md
