chore: release v0.7.0 with complete release package support
Major changes:
- Add complete release packaging script with node_modules included
- Release packages are now ready-to-use after extraction (no npm install needed)
- Add release documentation (RELEASE.md)
- Add MCP Registry server.json configuration
- Update version to 0.7.0
- Update .gitignore to exclude release artifacts

Release package features:
- Includes all production dependencies (node_modules)
- Flat directory structure for easy deployment
- Optimized package size (removes test files and docs from dependencies)
- Direct execution support: node dist/index.js
- Includes logos, OpenAPI schema, and all necessary files

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ my.sh
 # Local docs
 OPTIMIZATION_SUMMARY.md
 QUICKSTART.md
+
+# Release files
+*.tar.gz
+*.tgz
+release-tmp/
+test-release/
+
+# MCP Registry tokens
+.mcpregistry_*
